# qq-idle-rpg

./: .env.example  .env.onebot.example  .gitignore  README.md  pyproject.toml
app/: services.py
bot/: __main__.py  __main_onebot__.py  command_parsing.py  formatting.py  fuzzy_commands.py  inventory_image.py  reply_templates.py  state.py
data/: balance.yaml  events.yaml  items.yaml  monsters.yaml  world_bosses.yaml
docs/: equipment-stats.md  game-commands.md  napcat-environment-setup.md  onebot-normal-qq.md  openclaw-game-master-prompt.md  openclaw-mcp-integration.md  更新日志-2026-06-18.txt
game_core/: affixes.py  combat.py  config.py  equipment_progression.py  errors.py  exploration.py  loot.py  models.py  progression.py  ranking.py  shop.py  stamina.py  stats.py  void_sacrifice.py  world_boss.py
mcp_server/: __main__.py  handlers.py  server.py
storage/: db.py  repository.py  void_sacrifice_repo.py  world_boss_repo.py
tests/: test_affixes.py  test_combat.py  test_command_parsing.py  test_config.py  test_db.py  test_engine_smoke.py  test_equipment_progression.py  test_errors.py  test_exploration.py  test_find_item.py  test_formatting.py  test_fuzzy_commands.py  test_inventory_image.py  test_loot.py  test_mcp_handlers.py  test_mcp_handlers_actions.py  test_mcp_server.py  test_models.py  test_onebot_only_architecture.py  test_progression.py  test_ranking.py  test_reply_templates.py  test_repository.py  test_services_actions.py  test_services_register.py  test_services_smoke.py  test_shop.py  test_stamina.py  test_stats.py  test_void_sacrifice_core.py  (+5 more)
(+25 files in other folders)
